# Push_swap

./: CMakeLists.txt  Makefile  README.md  cases.c  checker  checker_main.c  checker_x_vis  commands1.c  commands2.c  commands3.c  commands4.c  problem_100  push_swap  push_swap.h  push_swap2.c  push_swap3.c  push_swap4.c  push_swap5.c  push_swap_main.c  test.sh
Libft/: .ft_atoidie.c.swp  .gitignore  Makefile  flag_o.c  ft_atoi.c  ft_atoidie.c  ft_die.c  ft_free_ar.c  ft_intmalloc.c  ft_itoa.c  ft_max.c  ft_pow.c  ft_printf.c  ft_putnstr.c  ft_putstr.c  ft_putupstr.c  ft_strcatspace.c  ft_strsplit.c  ft_swapint.c  ft_write.c  get_next_line.c  libft.h
checker.dSYM/Contents/Resources/DWARF/: checker
