cmake_minimum_required(VERSION 3.14)
project(FINAL C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(Libft)

add_executable(checker
        Libft/flag_char.c
        Libft/flag_f1.c
        Libft/flag_f2.c
        Libft/flag_int.c
        Libft/flag_o.c
        Libft/flag_p.c
        Libft/flag_percent.c
        Libft/flag_str.c
        Libft/flag_unsignedint.c
        Libft/flag_x1.c
        Libft/ft_atoi.c
        Libft/ft_atoidie.c
        Libft/ft_bzero.c
        Libft/ft_die.c
        Libft/ft_flagx2.c
        Libft/ft_free_ar.c
        Libft/ft_intlen.c
        Libft/ft_intmalloc.c
        Libft/ft_isalnum.c
        Libft/ft_isalpha.c
        Libft/ft_isascii.c
        Libft/ft_isdigit.c
        Libft/ft_isprint.c
        Libft/ft_itoa.c
        Libft/ft_itoabase.c
        Libft/ft_lstadd.c
        Libft/ft_lstdel.c
        Libft/ft_lstdelone.c
        Libft/ft_lstiter.c
        Libft/ft_lstmap.c
        Libft/ft_lstnew.c
        Libft/ft_max.c
        Libft/ft_memalloc.c
        Libft/ft_memccpy.c
        Libft/ft_memchr.c
        Libft/ft_memcmp.c
        Libft/ft_memcpy.c
        Libft/ft_memdel.c
        Libft/ft_memmove.c
        Libft/ft_memset.c
        Libft/ft_pow.c
        Libft/ft_printf.c
        Libft/ft_putchar.c
        Libft/ft_putchar_fd.c
        Libft/ft_putendl.c
        Libft/ft_putendl_fd.c
        Libft/ft_putnbr.c
        Libft/ft_putnbr_fd.c
        Libft/ft_putnbrpos.c
        Libft/ft_putnstr.c
        Libft/ft_putstr.c
        Libft/ft_putstr_fd.c
        Libft/ft_putunsignednbr.c
        Libft/ft_putupstr.c
        Libft/ft_reverse.c
        Libft/ft_strcat.c
        Libft/ft_strcatspace.c
        Libft/ft_strchr.c
        Libft/ft_strclr.c
        Libft/ft_strcmp.c
        Libft/ft_strcpy.c
        Libft/ft_strdel.c
        Libft/ft_strdup.c
        Libft/ft_strequ.c
        Libft/ft_striter.c
        Libft/ft_striteri.c
        Libft/ft_strjoin.c
        Libft/ft_strjoinfree.c
        Libft/ft_strlcat.c
        Libft/ft_strlen.c
        Libft/ft_strmap.c
        Libft/ft_strmapi.c
        Libft/ft_strncat.c
        Libft/ft_strncmp.c
        Libft/ft_strncpy.c
        Libft/ft_strnequ.c
        Libft/ft_strnew.c
        Libft/ft_strnstr.c
        Libft/ft_strrchr.c
        Libft/ft_strsplit.c
        Libft/ft_strstr.c
        Libft/ft_strsub.c
        Libft/ft_strtrim.c
        Libft/ft_swap.c
        Libft/ft_swapint.c
        Libft/ft_tolower.c
        Libft/ft_toupper.c
        Libft/ft_unsignedintlen.c
        Libft/ft_write.c
        Libft/get_next_line.c
        Libft/libft.h
        Libft/parsers.c
        cases.c
        checker_main.c
        commands1.c
        commands2.c
        commands3.c
        commands4.c
        push_swap4.c
        push_swap.h
        )

add_executable(push_swap
        Libft/flag_char.c
        Libft/flag_f1.c
        Libft/flag_f2.c
        Libft/flag_int.c
        Libft/flag_o.c
        Libft/flag_p.c
        Libft/flag_percent.c
        Libft/flag_str.c
        Libft/flag_unsignedint.c
        Libft/flag_x1.c
        Libft/ft_atoi.c
        Libft/ft_atoidie.c
        Libft/ft_bzero.c
        Libft/ft_die.c
        Libft/ft_flagx2.c
        Libft/ft_free_ar.c
        Libft/ft_intlen.c
        Libft/ft_intmalloc.c
        Libft/ft_isalnum.c
        Libft/ft_isalpha.c
        Libft/ft_isascii.c
        Libft/ft_isdigit.c
        Libft/ft_isprint.c
        Libft/ft_itoa.c
        Libft/ft_itoabase.c
        Libft/ft_lstadd.c
        Libft/ft_lstdel.c
        Libft/ft_lstdelone.c
        Libft/ft_lstiter.c
        Libft/ft_lstmap.c
        Libft/ft_lstnew.c
        Libft/ft_max.c
        Libft/ft_memalloc.c
        Libft/ft_memccpy.c
        Libft/ft_memchr.c
        Libft/ft_memcmp.c
        Libft/ft_memcpy.c
        Libft/ft_memdel.c
        Libft/ft_memmove.c
        Libft/ft_memset.c
        Libft/ft_pow.c
        Libft/ft_printf.c
        Libft/ft_putchar.c
        Libft/ft_putchar_fd.c
        Libft/ft_putendl.c
        Libft/ft_putendl_fd.c
        Libft/ft_putnbr.c
        Libft/ft_putnbr_fd.c
        Libft/ft_putnbrpos.c
        Libft/ft_putnstr.c
        Libft/ft_putstr.c
        Libft/ft_putstr_fd.c
        Libft/ft_putunsignednbr.c
        Libft/ft_putupstr.c
        Libft/ft_reverse.c
        Libft/ft_strcat.c
        Libft/ft_strcatspace.c
        Libft/ft_strchr.c
        Libft/ft_strclr.c
        Libft/ft_strcmp.c
        Libft/ft_strcpy.c
        Libft/ft_strdel.c
        Libft/ft_strdup.c
        Libft/ft_strequ.c
        Libft/ft_striter.c
        Libft/ft_striteri.c
        Libft/ft_strjoin.c
        Libft/ft_strjoinfree.c
        Libft/ft_strlcat.c
        Libft/ft_strlen.c
        Libft/ft_strmap.c
        Libft/ft_strmapi.c
        Libft/ft_strncat.c
        Libft/ft_strncmp.c
        Libft/ft_strncpy.c
        Libft/ft_strnequ.c
        Libft/ft_strnew.c
        Libft/ft_strnstr.c
        Libft/ft_strrchr.c
        Libft/ft_strsplit.c
        Libft/ft_strstr.c
        Libft/ft_strsub.c
        Libft/ft_strtrim.c
        Libft/ft_swap.c
        Libft/ft_swapint.c
        Libft/ft_tolower.c
        Libft/ft_toupper.c
        Libft/ft_unsignedintlen.c
        Libft/ft_write.c
        Libft/get_next_line.c
        Libft/libft.h
        Libft/parsers.c
        cases.c
        commands1.c
        commands2.c
        commands3.c
        commands4.c
        push_swap.h
        push_swap2.c
        push_swap3.c
        push_swap4.c
        push_swap5.c
        push_swap_main.c
        )